--- a/public/services/src/app/views/personal/reply/personal-reply.less
+++ b/public/services/src/app/views/personal/reply/personal-reply.less
@@ -24,11 +24,11 @@
                             float: left;
                             width: 0.86rem;
                             height: 0.89rem;
-                            background: url(/img/icon-like.png) no-repeat 0 0;
+                            background: url(/images/icon-like.png) no-repeat 0 0;
                             background-size: 100%;
                         }
                         .icon-pressed-like {
-                            background: url(/img/like.png) no-repeat 0 0;
+                            background: url(/images/like.png) no-repeat 0 0;
                             background-size: 100%;
                         }
                         .text-like{
@@ -52,7 +52,7 @@
                             float: left;
                             width: 1rem;
                             height: 0.89rem;
-                            background: url(/img/icon-comment.png) no-repeat 0 0;
+                            background: url(/images/icon-comment.png) no-repeat 0 0;
                             background-size: 100%;
                         }
                         .text-comment{
