--- a/public/services/src/app/views/personal/reply/reply.html
+++ b/public/services/src/app/views/personal/reply/reply.html
@@ -1,7 +1,7 @@
 <div class="myWork-page">
 	<div class="myWork-pageSection grid clearfix">
 		<a href="/services/ask/detail" class="workSection grid-item">
-			<img src="/img/work.png" alt="作品" class="workPic">
+			<img src="/images/work.png" alt="作品" class="workPic">
 			<div class="workSectionFooter clearfix">
 				<div class="footerWrapper">
 					<div class="like">
