--- a/public/services/src/app/views/personal/work/work.html
+++ b/public/services/src/app/views/personal/work/work.html
@@ -1,35 +1,17 @@
-<div class="main-ask">
-	<div class="main-ask-section grid clearfix">
+
 		<div class="ask-section grid-item">
 			<a href="/services/ask/detail" class="ask-section-main">
-				<img src="/img/work.png" alt="作品" class="workPic">
-				<span class="desc">描述描述</span>
+				<img src="<%= ask_image_url %>" alt="作品" class="workPic">
+				<span class="desc"><%= desc %></span>
 			</a>
 			<div class="ask-section-bottom clearfix">
 				<div class="help">
 					<i class="icon-help"></i>
-					<span class="text-help">23帮P</span>
+					<span class="text-help">帮P23</span>
 				</div>
 				<div class="work">
 					<i class="icon-work"></i>
-					<span class="text-work">66作品</span>
+					<span class="text-work">作品66</span>
 				</div>
 			</div>
 		</div>
-		<div class="ask-section grid-item">
-			<a href="/services/ask/detail" class="ask-section-main">
-				<img src="/img/work2.png" alt="作品" class="workPic">
-				<span class="desc">描述描述</span>
-			</a>
-			<div class="ask-section-bottom clearfix">
-				<div class="help">
-					<i class="icon-help"></i>
-					<span class="text-help">23帮P</span>
-				</div>
-				<div class="work">
-					<i class="icon-work"></i>
-					<span class="text-work">66作品</span>
-				</div>
-			</div>
-		</div>
-	</div>
