--- a/public/services/src/app/views/personal/header/header.html
+++ b/public/services/src/app/views/personal/header/header.html
@@ -2,13 +2,13 @@
 <div class="header-portrait">
 	<div class="user-info">
 		<div class="portrait">
-			<img src="/img/portrait.png" alt="用户头像">
+			<img src="/images/portrait.png" alt="用户头像">
 		</div>
 		<span class="nickname">卡拉马子</span>
 	</div>
 </div>
 <ul class="header-nav clearfix">
 	<li class="nav-item" data-type="work"><a href="javascript:;">我的求P</a></li>
-	<li class="nav-item" data-type="processing"><a href="javascript:;">进行中</a></li>
+	<li class="nav-item" data-type="inprogresses"><a href="javascript:;">进行中</a></li>
 	<li class="nav-item" data-type="reply"><a href="javascript:;">我的作品</a></li>
 </ul>
