--- a/public/services/src/app/views/personal/work/personal-work.less
+++ b/public/services/src/app/views/personal/work/personal-work.less
@@ -1,4 +1,3 @@
-.main-ask{
     .main-ask-section{
         width: 100%;
         background-color: #f7f7f7;
@@ -10,15 +9,19 @@
             border-radius: 0.21rem;
             box-shadow: 0 0.04rem  0 #e2e2e2;
             .ask-section-main{
+                display: block;
                 .workPic{
-                    width: 100%;
-                }
-                .desc{
                     display: block;
                     width: 100%;
-                    height: 2.86rem;
-                    box-sizing:border-box;
-                    padding: 0.71rem 0 0 0.43rem;
+                    margin-bottom: 0.71rem;
+                }
+                .desc{
+                    overflow: hidden;
+                    display: block;
+                    width: 100%;
+                    max-height: 2.6rem;
+                    line-height: 1.3rem;
+                    padding-left: 0.43rem;
                     font-size: 0.71rem;
                     color: rgba(0,0,0,0.8);
                     border-bottom: 0.12rem dotted rgba(0,0,0,0.49);
@@ -38,7 +41,7 @@
                         margin-right: 0.68rem;
                         width: 0.93rem;
                         height: 0.89rem;
-                        background:url(/img/icon-help.png)no-repeat 0 0;
+                        background:url(/images/icon-help.png)no-repeat 0 0;
                         background-size: 100%;
                     }
                     .text-help{
@@ -54,7 +57,7 @@
                         margin-right: 0.68rem;
                         width: 0.93rem;
                         height: 0.89rem;
-                        background:url(/img/icon-work.png)no-repeat 0 0;
+                        background:url(/images/icon-work.png)no-repeat 0 0;
                         background-size: 100%;
                     }
                     .text-work{
@@ -66,4 +69,3 @@
             }
         }
     }
-}
