--- a/public/css/main.css
+++ b/public/css/main.css
@@ -595,7 +595,196 @@ body {
 }
 
 
+.hot-pageSection {
+  width: 100%;
+  background-color: #f7f7f7;
+}
+.hot-pageSection .workSection {
+  float: left;
+  width: 47%;
+  margin: 1.5%;
+  border-radius: 0.29rem;
+  box-shadow: 0 0.04rem 0.04rem #e2e2e2;
+  overflow: hidden;
+}
+.hot-pageSection .workSection .workSectionHeader {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0.54rem 0 0.54rem 0.36rem;
+  background-color: #fff;
+}
+.hot-pageSection .workSection .workSectionHeader .portrait {
+  float: left;
+  width: 1.43rem;
+  height: 1.43rem;
+  margin-right: 0.29rem;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.hot-pageSection .workSection .workSectionHeader .portrait img {
+  display: block;
+  width: 100%;
+}
+.hot-pageSection .workSection .workSectionHeader .nickname {
+  float: left;
+  line-height: 1.43rem;
+  font-size: 0.71rem;
+  color: #000;
+}
+.hot-pageSection .workSection .workPic {
+  position: relative;
+  display: block;
+  font-size: 0;
+  width: 100%;
+}
+.hot-pageSection .workSection .workPic img {
+  width: 100%;
+}
+.hot-pageSection .workSection .workPic .origin {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 4rem;
+  height: 4rem;
+  border: 0.21rem solid rgba(0, 0, 0, 0.05);
+  border-bottom: 0;
+  border-radius: 0.21rem 0 0 0;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.hot-pageSection .workSection .workPic .origin .tag {
+  position: absolute;
+  display: block;
+  top: -0.21rem;
+  left: -0.21rem;
+  width: 1.57rem;
+  height: 0.71rem;
+  line-height: 0.71rem;
+  font-size: 0.5rem;
+  text-align: center;
+  border-radius: 0.21rem 0 0 0;
+  background-color: #Feee60;
+  z-index: 1;
+}
+.hot-pageSection .workSection .workPic .origin .pic {
+  width: 100%;
+  height: 4rem;
+  overflow: hidden;
+}
+.hot-pageSection .workSection .workPic .origin .pic img {
+  display: block;
+  width: 100%;
+}
+.hot-pageSection .workSection .workPic .origin .div-line {
+  position: absolute;
+  left: -0.21rem;
+  bottom: -0.18rem;
+  width: 4.42rem;
+  height: 0.18rem;
+  background-color: #fded5e;
+  z-index: 1;
+}
+.hot-pageSection .workSection .workDesc {
+  display: block;
+  box-sizing: border-box;
+  padding-top: 0.57rem;
+  padding-left: 0.68rem;
+  height: 1.43rem;
+  font-size: 0.71rem;
+  color: #000;
+  background-color: #fff;
+}
+.hot-pageSection .workSection .workSectionFooter {
+  background-color: #fff;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper {
+  float: right;
+  padding: 1rem 0;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like {
+  float: left;
+  line-height: 0.89rem;
+  margin-left: 0.93rem;
+  cursor: pointer;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
+  display: block;
+  float: left;
+  width: 0.86rem;
+  height: 0.89rem;
+  background: url(/images/icon-like.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
+  background: url(/images/like.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
+  display: block;
+  float: left;
+  height: 0.89rem;
+  margin-left: 0.21rem;
+  font-size: 0.71rem;
+  font-family: "Helvetica-Light", "sans-serif";
+  color: #000;
+  opacity: 0.3;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment {
+  float: left;
+  line-height: 0.89rem;
+  margin-left: 0.93rem;
+  cursor: pointer;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment .icon-comment {
+  display: block;
+  float: left;
+  width: 1rem;
+  height: 0.89rem;
+  background: url(/images/icon-comment.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment .text-comment {
+  display: block;
+  float: left;
+  height: 0.89rem;
+  margin-left: 0.21rem;
+  margin-right: 0.25rem;
+  font-size: 0.71rem;
+  font-family: "Helvetica-Light", "sans-serif";
+  color: #000;
+  opacity: 0.3;
+}
 
+
+.header-logo {
+  width: 100%;
+  height: 3.57rem;
+  background-color: #fff;
+  padding: 0.64rem 1.32rem 0 1.82rem;
+  box-sizing: border-box;
+}
+.header-logo .logo {
+  float: left;
+  width: 1.93rem;
+  height: 2.43rem;
+}
+.header-logo .logo img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.header-logo .personalCenter {
+  float: right;
+  width: 2.29rem;
+  height: 2.29rem;
+  border: 0.08rem solid #a9a9a9;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.header-logo .personalCenter img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 
 .deleteComment-fix {
   position: fixed;
@@ -1088,6 +1277,7 @@ body {
 }
 .main-processing .processing-block .content .content-top {
   width: 100%;
+  margin-bottom: 1.5rem;
 }
 .main-processing .processing-block .content .content-top .user-info {
   float: left;
@@ -1118,7 +1308,7 @@ body {
   margin-right: 0.18rem;
   width: 0.64rem;
   height: 0.75rem;
-  background: url(/img/icon-delete.png) no-repeat 0 0;
+  background: url(/images/icon-delete.png) no-repeat 0 0;
   background-size: 100%;
 }
 .main-processing .processing-block .content .content-top .delete-btn span {
@@ -1128,12 +1318,14 @@ body {
   color: rgba(0, 0, 0, 0.3);
 }
 .main-processing .processing-block .content .content-main {
-  padding: 1.5rem 0 0 0.36rem;
+  padding-left: 0.36rem;
   max-height: 4rem;
   overflow: hidden;
 }
 .main-processing .processing-block .content .content-main .main-text {
+  overflow: hidden;
   font-size: 0.71rem;
+  line-height: 1.2rem;
   color: rgba(0, 0, 0, 0.8);
 }
 .main-processing .processing-block .content .content-bottom {
@@ -1151,7 +1343,7 @@ body {
   display: block;
   width: 0.57rem;
   height: 0.71rem;
-  background: url(/img/icon-download.png) no-repeat 0 0;
+  background: url(/images/icon-download.png) no-repeat 0 0;
   background-size: 100%;
 }
 .main-processing .processing-block .content .content-bottom .download span {
@@ -1168,7 +1360,7 @@ body {
   display: block;
   width: 0.57rem;
   height: 0.71rem;
-  background: url(/img/icon-upload.png) no-repeat 0 0;
+  background: url(/images/icon-upload.png) no-repeat 0 0;
   background-size: 100%;
 }
 .main-processing .processing-block .content .content-bottom .upload span {
@@ -1178,32 +1370,33 @@ body {
   color: rgba(0, 0, 0, 0.3);
 }
 
-.myWork-page .myWork-pageSection {
-  width: 100%;
+.myWork-pageSection {
+  float: left;
+  width: 50%;
   background-color: #f7f7f7;
 }
-.myWork-page .myWork-pageSection .workSection {
+.myWork-pageSection .workSection {
   float: left;
-  width: 47%;
-  margin: 1.5%;
+  width: 94%;
+  margin: 3%;
 }
-.myWork-page .myWork-pageSection .workSection .workPic {
+.myWork-pageSection .workSection .workPic {
   width: 100%;
 }
-.myWork-page .myWork-pageSection .workSection .workSectionFooter {
+.myWork-pageSection .workSection .workSectionFooter {
   background-color: #fff;
 }
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper {
+.myWork-pageSection .workSection .workSectionFooter .footerWrapper {
   float: right;
   padding: 1rem 0;
 }
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like {
+.myWork-pageSection .workSection .workSectionFooter .footerWrapper .like {
   float: left;
   line-height: 0.89rem;
   margin-left: 0.93rem;
   cursor: pointer;
 }
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
+.myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
   display: block;
   float: left;
   width: 0.86rem;
@@ -1211,11 +1404,11 @@ body {
   background: url(/images/icon-like.png) no-repeat 0 0;
   background-size: 100%;
 }
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
+.myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
   background: url(/images/like.png) no-repeat 0 0;
   background-size: 100%;
 }
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
+.myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
   display: block;
   float: left;
   height: 0.89rem;
@@ -1225,13 +1418,13 @@ body {
   color: #000;
   opacity: 0.3;
 }
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment {
+.myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment {
   float: left;
   line-height: 0.89rem;
   margin-left: 0.93rem;
   cursor: pointer;
 }
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment .icon-comment {
+.myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment .icon-comment {
   display: block;
   float: left;
   width: 1rem;
@@ -1239,7 +1432,7 @@ body {
   background: url(/images/icon-comment.png) no-repeat 0 0;
   background-size: 100%;
 }
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment .text-comment {
+.myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment .text-comment {
   display: block;
   float: left;
   height: 0.89rem;
