--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -1,3 +1,11 @@
+<div class="header-logo clearfix">
+	<div class="logo">
+		<img src="/images/logo.png" alt="LOGO">
+	</div>
+	<a href="javascript:;" class="personalCenter">
+		<img src="/images/personalCenter.png" alt="用户中心">
+	</a>
+</div>
 <ul class="menu" id="serveceMenu">
 	<li class="menuTop none">
 		<div class="menuBg"></div>
