--- a/public/services/src/app/views/personal/header/header.html
+++ b/public/services/src/app/views/personal/header/header.html
@@ -1,4 +1,3 @@
-<div class="header-logo"></div>
 <div class="header-portrait">
 	<div class="user-info">
 		<div class="portrait">
@@ -8,7 +7,7 @@
 	</div>
 </div>
 <ul class="header-nav clearfix">
-	<li class="nav-item" data-type="work"><a href="javascript:;">我的求P</a></li>
+	<li class="nav-item" data-type="ask"><a href="javascript:;">我的求P</a></li>
 	<li class="nav-item" data-type="inprogresses"><a href="javascript:;">进行中</a></li>
-	<li class="nav-item" data-type="reply"><a href="javascript:;">我的作品</a></li>
+	<li class="nav-item" data-type="replies"><a href="javascript:;">我的作品</a></li>
 </ul>
