--- a/public/services/src/app/views/personal/processing/processing.less
+++ b/public/services/src/app/views/personal/processing/processing.less
@@ -29,6 +29,7 @@
             padding: 0.54rem 0.64rem 0.29rem 0.43rem;
             .content-top{
                 width: 100%;
+                margin-bottom: 1.5rem;
                 .user-info{
                     float: left;
                     line-height: 1.43rem;
@@ -57,7 +58,7 @@
                         margin-right: 0.18rem;
                         width: 0.64rem;
                         height: 0.75rem;
-                        background: url(/img/icon-delete.png)no-repeat 0 0;
+                        background: url(/images/icon-delete.png)no-repeat 0 0;
                         background-size: 100%;
                     }
                     span{
@@ -69,11 +70,13 @@
                 }
             }
             .content-main{
-                padding: 1.5rem 0 0 0.36rem;
+                padding-left: 0.36rem;
                 max-height: 4rem;
                 overflow: hidden;
                 .main-text{
+                    overflow: hidden;
                     font-size: 0.71rem;
+                    line-height: 1.2rem;
                     color: rgba(0,0,0,0.8);
                 }
             }
@@ -90,7 +93,7 @@
                         display: block;
                         width: 0.57rem;
                         height: 0.71rem;
-                        background:url(/img/icon-download.png)no-repeat 0 0;
+                        background:url(/images/icon-download.png)no-repeat 0 0;
                         background-size: 100%;
                     }
                     span{
@@ -107,7 +110,7 @@
                         display: block;
                         width: 0.57rem;
                         height: 0.71rem;
-                        background:url(/img/icon-upload.png)no-repeat 0 0;
+                        background:url(/images/icon-upload.png)no-repeat 0 0;
                         background-size: 100%;
                     }
                     span{
