--- a/public/services/src/app/views/personal/reply/personal-reply.less
+++ b/public/services/src/app/views/personal/reply/personal-reply.less
@@ -1,11 +1,12 @@
-.myWork-page{
+
     .myWork-pageSection{
-        width: 100%;
+        float: left;
+        width: 50%;
         background-color: #f7f7f7;
         .workSection{
             float: left;
-            width: 47%;
-            margin: 1.5%;
+            width: 94%;
+            margin: 3%;
             .workPic{
                 width: 100%;
             }
@@ -71,4 +72,3 @@
             }
         }
     }
-}
