--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -31,6 +31,9 @@ body, html {
 #__loading {
     display: none !important;
 }
+.header {
+	border-bottom: 0.71rem solid #f7f7f7;
+}
 .none {
     display: none ;  
 }
