--- a/public/css/main.css
+++ b/public/css/main.css
@@ -146,6 +146,9 @@ html {
 #__loading {
   display: none !important;
 }
+.header {
+  border-bottom: 0.71rem solid #f7f7f7;
+}
 .none {
   display: none ;
 }
@@ -594,167 +597,6 @@ body {
   box-shadow: none;
 }
 
-
-.hot-pageSection {
-  width: 100%;
-  background-color: #f7f7f7;
-}
-.hot-pageSection .workSection {
-  float: left;
-  width: 47%;
-  margin: 1.5%;
-  border-radius: 0.29rem;
-  box-shadow: 0 0.04rem 0.04rem #e2e2e2;
-  overflow: hidden;
-}
-.hot-pageSection .workSection .workSectionHeader {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0.54rem 0 0.54rem 0.36rem;
-  background-color: #fff;
-}
-.hot-pageSection .workSection .workSectionHeader .portrait {
-  float: left;
-  width: 1.43rem;
-  height: 1.43rem;
-  margin-right: 0.29rem;
-  border-radius: 100%;
-  overflow: hidden;
-}
-.hot-pageSection .workSection .workSectionHeader .portrait img {
-  display: block;
-  width: 100%;
-}
-.hot-pageSection .workSection .workSectionHeader .nickname {
-  float: left;
-  line-height: 1.43rem;
-  font-size: 0.71rem;
-  color: #000;
-}
-.hot-pageSection .workSection .workPic {
-  position: relative;
-  display: block;
-  font-size: 0;
-  width: 100%;
-}
-.hot-pageSection .workSection .workPic img {
-  width: 100%;
-}
-.hot-pageSection .workSection .workPic .origin {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 4rem;
-  height: 4rem;
-  border: 0.21rem solid rgba(0, 0, 0, 0.05);
-  border-bottom: 0;
-  border-radius: 0.21rem 0 0 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-.hot-pageSection .workSection .workPic .origin .tag {
-  position: absolute;
-  display: block;
-  top: -0.21rem;
-  left: -0.21rem;
-  width: 1.57rem;
-  height: 0.71rem;
-  line-height: 0.71rem;
-  font-size: 0.5rem;
-  text-align: center;
-  border-radius: 0.21rem 0 0 0;
-  background-color: #Feee60;
-  z-index: 1;
-}
-.hot-pageSection .workSection .workPic .origin .pic {
-  width: 100%;
-  height: 4rem;
-  overflow: hidden;
-}
-.hot-pageSection .workSection .workPic .origin .pic img {
-  display: block;
-  width: 100%;
-}
-.hot-pageSection .workSection .workPic .origin .div-line {
-  position: absolute;
-  left: -0.21rem;
-  bottom: -0.18rem;
-  width: 4.42rem;
-  height: 0.18rem;
-  background-color: #fded5e;
-  z-index: 1;
-}
-.hot-pageSection .workSection .workDesc {
-  display: block;
-  box-sizing: border-box;
-  padding-top: 0.57rem;
-  padding-left: 0.68rem;
-  height: 1.43rem;
-  font-size: 0.71rem;
-  color: #000;
-  background-color: #fff;
-}
-.hot-pageSection .workSection .workSectionFooter {
-  background-color: #fff;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper {
-  float: right;
-  padding: 1rem 0;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .like {
-  float: left;
-  line-height: 0.89rem;
-  margin-left: 0.93rem;
-  cursor: pointer;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
-  display: block;
-  float: left;
-  width: 0.86rem;
-  height: 0.89rem;
-  background: url(/images/icon-like.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
-  background: url(/images/like.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
-  display: block;
-  float: left;
-  height: 0.89rem;
-  margin-left: 0.21rem;
-  font-size: 0.71rem;
-  font-family: "Helvetica-Light", "sans-serif";
-  color: #000;
-  opacity: 0.3;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment {
-  float: left;
-  line-height: 0.89rem;
-  margin-left: 0.93rem;
-  cursor: pointer;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment .icon-comment {
-  display: block;
-  float: left;
-  width: 1rem;
-  height: 0.89rem;
-  background: url(/images/icon-comment.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment .text-comment {
-  display: block;
-  float: left;
-  height: 0.89rem;
-  margin-left: 0.21rem;
-  margin-right: 0.25rem;
-  font-size: 0.71rem;
-  font-family: "Helvetica-Light", "sans-serif";
-  color: #000;
-  opacity: 0.3;
-}
-
-
 .header-logo {
   width: 100%;
   height: 3.57rem;
@@ -1146,6 +988,85 @@ body {
   cursor: pointer;
 }
 
+.index-ask-pageSection {
+  width: 100%;
+  background-color: #f7f7f7;
+}
+.index-ask-pageSection .workSection {
+  float: left;
+  width: 47%;
+  margin: 0 1.5% 3%;
+  border-radius: 0.29rem;
+  box-shadow: 0 0.04rem 0.04rem #e2e2e2;
+  overflow: hidden;
+}
+.index-ask-pageSection .workSection .workSectionHeader {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0.54rem 0 0.54rem 0.36rem;
+  background-color: #fff;
+}
+.index-ask-pageSection .workSection .workSectionHeader .portrait {
+  float: left;
+  width: 1.43rem;
+  height: 1.43rem;
+  margin-right: 0.29rem;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.index-ask-pageSection .workSection .workSectionHeader .portrait img {
+  display: block;
+  width: 100%;
+}
+.index-ask-pageSection .workSection .workSectionHeader .nickname {
+  float: left;
+  line-height: 1.43rem;
+  font-size: 0.71rem;
+  color: #000;
+}
+.index-ask-pageSection .workSection .workPic {
+  display: block;
+  font-size: 0;
+  width: 100%;
+}
+.index-ask-pageSection .workSection .workPic img {
+  width: 100%;
+}
+.index-ask-pageSection .workSection .workDesc {
+  overflow: hidden;
+  display: block;
+  padding-top: 0.5rem;
+  padding-left: 0.68rem;
+  line-height: 1.2rem;
+  max-height: 2.4rem;
+  font-size: 0.71rem;
+  color: #000;
+  background-color: #fff;
+}
+.index-ask-pageSection .workSection .help-btn-wrapper {
+  padding: 0.5rem 0 0.5rem 0;
+  background-color: #fff;
+}
+.index-ask-pageSection .workSection .help-btn-wrapper .help-btn {
+  display: block;
+  margin: 0 auto;
+  width: 6.29rem;
+  height: 2.04rem;
+  background-color: #ffed4f;
+  border-radius: 3.57rem;
+  text-align: center;
+  line-height: 2.04rem;
+  color: #000;
+  font-size: 0.86rem;
+}
+.index-ask-pageSection .workSection .help-btn-wrapper .help-btn .icon-help-black {
+  display: inline-block;
+  width: 0.82rem;
+  height: 0.82rem;
+  margin-right: 0.2rem;
+  background: url(/images/icon-help-black.png) no-repeat 0 0;
+  background-size: 100%;
+}
 
 .downloadContent {
   width: 100%;
@@ -1182,6 +1103,165 @@ body {
 .downloadContent .downloadFooter .downloadBtn .text-download {
   font-size: 0.93rem;
   vertical-align: middle;
+}
+
+.hot-pageSection {
+  width: 100%;
+  background-color: #f7f7f7;
+}
+.hot-pageSection .workSection {
+  float: left;
+  width: 47%;
+  margin: 1.5%;
+  border-radius: 0.29rem;
+  box-shadow: 0 0.04rem 0.04rem #e2e2e2;
+  overflow: hidden;
+}
+.hot-pageSection .workSection .workSectionHeader {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0.54rem 0 0.54rem 0.36rem;
+  background-color: #fff;
+}
+.hot-pageSection .workSection .workSectionHeader .portrait {
+  float: left;
+  width: 1.43rem;
+  height: 1.43rem;
+  margin-right: 0.29rem;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.hot-pageSection .workSection .workSectionHeader .portrait img {
+  display: block;
+  width: 100%;
+}
+.hot-pageSection .workSection .workSectionHeader .nickname {
+  float: left;
+  line-height: 1.43rem;
+  font-size: 0.71rem;
+  color: #000;
+}
+.hot-pageSection .workSection .workPic {
+  position: relative;
+  display: block;
+  font-size: 0;
+  width: 100%;
+}
+.hot-pageSection .workSection .workPic img {
+  width: 100%;
+}
+.hot-pageSection .workSection .workPic .origin {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 4rem;
+  height: 4rem;
+  border: 0.21rem solid rgba(0, 0, 0, 0.05);
+  border-bottom: 0;
+  border-radius: 0.21rem 0 0 0;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.hot-pageSection .workSection .workPic .origin .tag {
+  position: absolute;
+  display: block;
+  top: -0.21rem;
+  left: -0.21rem;
+  width: 1.57rem;
+  height: 0.71rem;
+  line-height: 0.71rem;
+  font-size: 0.5rem;
+  text-align: center;
+  border-radius: 0.21rem 0 0 0;
+  background-color: #Feee60;
+  z-index: 1;
+}
+.hot-pageSection .workSection .workPic .origin .pic {
+  width: 100%;
+  height: 4rem;
+  overflow: hidden;
+}
+.hot-pageSection .workSection .workPic .origin .pic img {
+  display: block;
+  width: 100%;
+}
+.hot-pageSection .workSection .workPic .origin .div-line {
+  position: absolute;
+  left: -0.21rem;
+  bottom: -0.18rem;
+  width: 4.42rem;
+  height: 0.18rem;
+  background-color: #fded5e;
+  z-index: 1;
+}
+.hot-pageSection .workSection .workDesc {
+  display: block;
+  box-sizing: border-box;
+  padding-top: 0.57rem;
+  padding-left: 0.68rem;
+  height: 1.43rem;
+  font-size: 0.71rem;
+  color: #000;
+  background-color: #fff;
+}
+.hot-pageSection .workSection .workSectionFooter {
+  background-color: #fff;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper {
+  float: right;
+  padding: 1rem 0;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like {
+  float: left;
+  line-height: 0.89rem;
+  margin-left: 0.93rem;
+  cursor: pointer;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
+  display: block;
+  float: left;
+  width: 0.86rem;
+  height: 0.89rem;
+  background: url(/images/icon-like.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
+  background: url(/images/like.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
+  display: block;
+  float: left;
+  height: 0.89rem;
+  margin-left: 0.21rem;
+  font-size: 0.71rem;
+  font-family: "Helvetica-Light", "sans-serif";
+  color: #000;
+  opacity: 0.3;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment {
+  float: left;
+  line-height: 0.89rem;
+  margin-left: 0.93rem;
+  cursor: pointer;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment .icon-comment {
+  display: block;
+  float: left;
+  width: 1rem;
+  height: 0.89rem;
+  background: url(/images/icon-comment.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment .text-comment {
+  display: block;
+  float: left;
+  height: 0.89rem;
+  margin-left: 0.21rem;
+  margin-right: 0.25rem;
+  font-size: 0.71rem;
+  font-family: "Helvetica-Light", "sans-serif";
+  color: #000;
+  opacity: 0.3;
 }
 
 .header-logo {
