--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -1,7 +1,7 @@
 <div class="header-logo clearfix">
-	<div class="logo">
+	<a href="" class="logo">
 		<img src="/images/logo.png" alt="LOGO">
-	</div>
+	</a>
 	<a href="javascript:;" class="personalCenter">
 		<img src="/images/personalCenter.png" alt="用户中心">
 	</a>
@@ -15,7 +15,7 @@
 		<div class="menuBg"></div>
 		<i class="icon-My"></i>
 		<ul class="menuMy-list hide">
-			<a href="/services/ask/index" class="menuItem clearfix">
+			<a href="#ask/index" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-hall"></i>
 				<span class="text-menuItem">求P大厅</span>
 			</a >
