--- a/public/css/main.css
+++ b/public/css/main.css
@@ -606,13 +606,13 @@ body {
 }
 .header-logo .logo {
   float: left;
-  width: 1.93rem;
+  width: 4.93rem;
   height: 2.43rem;
 }
 .header-logo .logo img {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 1.93rem;
+  height: 2.43rem;
 }
 .header-logo .personalCenter {
   float: right;
@@ -721,10 +721,15 @@ body {
   width: 100%;
 }
 .post-workShow .sectionHeader .userName {
-  display: block;
   float: left;
   margin-left: 0.36rem;
   margin-top: 5%;
+  font-size: 1rem;
+}
+.post-workShow .sectionHeader .pubdate {
+  float: right;
+  margin-top: 5%;
+  margin-right: 3%;
   font-size: 1rem;
 }
 .post-workShow .sectionContent {
@@ -753,16 +758,13 @@ body {
   margin-bottom: 1.25rem;
   margin-right: 0.91rem;
 }
-.post-workShow .sectionFooter .footerBottom .pubdate {
-  display: block;
+.post-workShow .sectionFooter .footerBottom .share {
   float: left;
-  margin-right: 0.86rem;
-  color: #000;
-  opacity: 0.3;
-  font-size: 0.86rem;
-}
-.post-workShow .sectionFooter .footerBottom .pubdate .excTiming {
-  margin-left: 0.29rem;
+  width: 1.25rem;
+  height: 1.51rem;
+  margin-top: -0.2rem;
+  background: url(/images/ic_share.png) no-repeat 0 0;
+  background-size: 100%;
 }
 .post-workShow .sectionFooter .footerBottom .communicate {
   float: right;
@@ -778,15 +780,15 @@ body {
   background: url(/images/icon-like-deepCol.png) no-repeat 0 0;
   background-size: 100%;
 }
-.post-workShow .sectionFooter .footerBottom .communicate .like-btn .icon-pressed-like {
-  background: url(/images/like.png) no-repeat 0 0;
-  background-size: 100%;
-}
 .post-workShow .sectionFooter .footerBottom .communicate .like-btn .text-like-btn {
   float: left;
   font-size: 0.86rem;
   color: #656565;
   margin-left: .5rem;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .liked-icon .icon-like-btn {
+  background: url(/images/like.png) no-repeat 0 0;
+  background-size: 100%;
 }
 .post-workShow .sectionFooter .footerBottom .communicate .comment-btn {
   float: left;
