--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -6,12 +6,12 @@
     box-sizing: border-box;
     .logo{
         float: left;
-        width: 1.93rem;
+        width: 4.93rem;
         height: 2.43rem;
         img{
             display: block;
-            width: 100%;
-            height: 100%;
+            width: 1.93rem;
+            height: 2.43rem;
         }
     }
     .personalCenter{
