--- a/public/services/src/app/views/ask/detail/ask-detail.less
+++ b/public/services/src/app/views/ask/detail/ask-detail.less
@@ -320,3 +320,27 @@
 		}
 	}
 }
+.share-mask {
+	position: fixed;
+	z-index: 999999;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.7);
+	.mask-p {
+		padding-top: 3.57rem;
+		text-align: center;
+		font-size: 1.21rem;
+		color: #fff;
+		line-height: 1.93rem;
+	}
+	.mask-icon {
+		position: absolute;
+		top: 1.57rem;
+		right: 2.29rem;
+		width: 2.82rem;
+		height: 2.57rem;
+		background: url("http://7u2spr.com2.z0.glb.qiniucdn.com/movie/share.png") center no-repeat;
+		background-size: contain;
+	}
+}
