--- a/public/services/src/app/views/ask/index/index.html
+++ b/public/services/src/app/views/ask/index/index.html
@@ -10,8 +10,8 @@
 	</a>
 	<span class="workDesc"><%= desc %></span>
 	<div class="help-btn-wrapper">
-		<a href="javascript:;" class="help-btn">
+		<div class="help-btn" id="<%= ask_id %>" type="<%= type %>">
 			<i class="icon-help-black"></i>帮P
-		</a>
+		</div>
 	</div>
 </div>
