--- a/public/css/main.css
+++ b/public/css/main.css
@@ -240,185 +240,6 @@ body {
   text-align: center;
   line-height: 2.5rem;
 }
-.menu {
-  position: fixed;
-  bottom: 7%;
-  /*to be modified*/
-  right: 4%;
-  z-index: 980;
-}
-.menu .menuMy {
-  position: relative;
-  display: block;
-  width: 3.29rem;
-  height: 3.29rem;
-  margin-top: 0.93rem;
-}
-.menu .menuMy .menuBg {
-  width: 100%;
-  height: 100%;
-  opacity: 0.89;
-  border: 0.08rem solid rgba(255, 255, 255, 0.9);
-  border-radius: 100%;
-  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
-  background-color: #000;
-}
-.menu .menuMy .icon-My {
-  display: block;
-  width: 0.93rem;
-  height: 1.21rem;
-  position: absolute;
-  top: 0;
-  left: 0.25rem;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  background: url(/images/icon-my.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.menu .menuMy .menuMy-list {
-  display: block;
-  position: absolute;
-  bottom: -0.07rem;
-  right: -0.07rem;
-  width: 10.36rem;
-  padding: 0.57rem 0;
-  border-radius: 0.21rem;
-  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
-  background-color: #fff;
-}
-.menu .menuMy .menuMy-list .menuItem {
-  display: block;
-  padding: 1rem 0;
-  margin-left: 1.64rem;
-  color: #000;
-}
-.menu .menuMy .menuMy-list .menuItem .icon-menuItem {
-  display: block;
-  float: left;
-  width: 1.25rem;
-  height: 1.07rem;
-}
-.menu .menuMy .menuMy-list .menuItem .text-menuItem {
-  display: block;
-  float: left;
-  margin-left: 0.68rem;
-  font-size: 1.07rem;
-  opacity: .89;
-  cursor: pointer;
-}
-.menu .menuMy .menuMy-list .menuItem .icon-menuItem-hall {
-  background: url(/images/icon-menuItem-hall.png) no-repeat center bottom;
-  background-size: contain;
-}
-.menu .menuMy .menuMy-list .menuItem .icon-menuItem-ask {
-  background: url(/images/icon-menuItem-ask.png) no-repeat center bottom;
-  background-size: contain;
-}
-.menu .menuMy .menuMy-list .menuItem .icon-menuItem-help {
-  background: url(/images/icon-menuItem-help.png) no-repeat center bottom;
-  background-size: contain;
-}
-.menu .menuMy .menuMy-list .menuItem .icon-menuItem-work {
-  background: url(/images/icon-menuItem-work.png) no-repeat center bottom;
-  background-size: contain;
-}
-.menu .menuPs {
-  position: relative;
-  /*display: block;*/
-  width: 3.29rem;
-  height: 3.29rem;
-  margin-top: 0.93rem;
-  border: 0.08rem solid rgba(255, 255, 255, 0.9);
-  border-radius: 100%;
-  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
-  background-color: #000;
-}
-.menu .menuPs .menuBg {
-  width: 100%;
-  height: 100%;
-  opacity: 0.89;
-}
-.menu .menuPs .icon-Ps {
-  display: block;
-  width: 0.68rem;
-  height: 1rem;
-  position: absolute;
-  top: 0;
-  left: 0.36rem;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  background: url(/images/icon-ps.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.menu .menuPs .menuPs-list {
-  display: block;
-  position: absolute;
-  bottom: -0.07rem;
-  right: -0.07rem;
-  width: 10.36rem;
-  padding: 0.57rem 0;
-  border-radius: 0.21rem;
-  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
-  background-color: #fff;
-}
-.menu .menuPs .menuPs-list .menuItem {
-  padding: 1rem 0;
-  margin-left: 1.28rem;
-}
-.menu .menuPs .menuPs-list .menuItem .icon-menuItem {
-  display: block;
-  float: left;
-  margin-top: .15rem;
-  width: 1.25rem;
-  height: 1.07rem;
-}
-.menu .menuPs .menuPs-list .menuItem .text-menuItem {
-  display: block;
-  float: left;
-  margin-left: 1.04rem;
-  font-size: 1.07rem;
-  opacity: .89;
-  cursor: pointer;
-}
-.menu .menuPs .menuPs-list .menuItem .icon-menuItem-ask {
-  background: url(/images/icon-menuItem-ask.png) no-repeat center bottom;
-  background-size: contain;
-}
-.menu .menuPs .menuPs-list .menuItem .icon-menuItem-switch {
-  background: url(/images/icon-menuItem-switch.png) no-repeat center bottom;
-  background-size: contain;
-}
-.menu .menuTop {
-  position: relative;
-  /*display: block;*/
-  width: 3.29rem;
-  height: 3.29rem;
-  margin-top: 0.93rem;
-}
-.menu .menuTop .menuBg {
-  width: 100%;
-  height: 100%;
-  opacity: 0.89;
-  border: 0.08rem solid rgba(255, 255, 255, 0.9);
-  border-radius: 100%;
-  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
-  background-color: #000;
-}
-.menu .menuTop .icon-top {
-  display: block;
-  width: 1.21rem;
-  height: 1.29rem;
-  position: absolute;
-  top: 0;
-  left: 0.36rem;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  background: url(/images/icon-top.png) no-repeat 0 0;
-  background-size: 100%;
-}
 .index-pageSection {
   width: 100%;
   border-bottom: 0.36rem solid #F7F7F7;
@@ -626,6 +447,189 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+}
+.menu {
+  position: fixed;
+  bottom: 7%;
+  /*to be modified*/
+  right: 4%;
+  z-index: 980;
+  /*    .menuPs{
+        position: relative;
+        width: 3.29rem;
+        height: 3.29rem;
+        margin-top: 0.93rem;
+        border: 0.08rem solid rgba(255,255,255,0.9);
+        border-radius: 100%;
+        box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+        background-color: #000;
+        .menuBg{
+            width: 100%;
+            height: 100%;
+            opacity: 0.89;
+        }
+        .icon-Ps{
+            display: block;
+            width: 0.68rem;
+            height: 1rem;
+            position: absolute;
+            top: 0;
+            left: 0.36rem;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            background: url(/images/icon-ps.png) no-repeat 0 0;
+            background-size: 100%;
+        }
+        .menuPs-list{
+            display: block;
+            position: absolute;
+            bottom: -0.07rem;
+            right: -0.07rem;
+            width: 10.36rem;
+            padding: 0.57rem 0;
+            border-radius: 0.21rem;
+            box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+            background-color: #fff;
+            .menuItem{
+                padding: 1rem 0;
+                margin-left: 1.28rem;
+                .icon-menuItem{
+                    display: block;
+                    float: left;
+                    margin-top: .15rem;
+                    width: 1.25rem;
+                    height: 1.07rem;
+                }
+                .text-menuItem{
+                    display: block;
+                    float: left;
+                    margin-left: 1.04rem;
+                    font-size: 1.07rem;
+                    opacity: .89;
+                    cursor: pointer;
+                }
+                .icon-menuItem-ask{
+                    background: url(/images/icon-menuItem-ask.png)no-repeat center bottom;
+                    background-size: contain;
+                }
+                .icon-menuItem-switch{
+                    background: url(/images/icon-menuItem-switch.png)no-repeat center bottom;
+                    background-size: contain;
+                }
+            }
+        }
+    }*/
+}
+.menu .menuPs {
+  /*        position: relative;
+        display: block;
+        width: 3.29rem;
+        height: 3.29rem;
+        margin-top: 0.93rem;*/
+  position: relative;
+  width: 3.29rem;
+  height: 3.29rem;
+  margin-top: 0.93rem;
+  border: 0.08rem solid rgba(255, 255, 255, 0.9);
+  border-radius: 100%;
+  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
+  background-color: #000;
+}
+.menu .menuPs .menuBg {
+  width: 100%;
+  height: 100%;
+  opacity: 0.89;
+  border: 0.08rem solid rgba(255, 255, 255, 0.9);
+  border-radius: 100%;
+  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
+  background-color: #000;
+}
+.menu .menuPs .icon-My {
+  display: block;
+  width: 0.93rem;
+  height: 1.21rem;
+  position: absolute;
+  top: 0;
+  left: 0.25rem;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background: url(/images/icon-my.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.menu .menuPs .menuMy-list {
+  display: block;
+  position: absolute;
+  bottom: 0rem;
+  right: 3.93rem;
+  width: 10.36rem;
+  border-radius: 1rem;
+  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
+  background-color: #fff;
+}
+.menu .menuPs .menuMy-list .menuItem {
+  display: block;
+  /*padding: 1rem 0;*/
+  padding: 1.36rem 0 1.36rem 2.57rem;
+  color: #000;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.menu .menuPs .menuMy-list .menuItem .icon-menuItem {
+  float: left;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-right: 1.54rem;
+}
+.menu .menuPs .menuMy-list .menuItem .text-menuItem {
+  float: left;
+  font-size: 1.07rem;
+  opacity: .89;
+}
+.menu .menuPs .menuMy-list .menuItem .icon-menuItem-hall {
+  background: url(/images/p.png) no-repeat center bottom;
+  background-size: contain;
+}
+.menu .menuPs .menuMy-list .menuItem .icon-menuItem-ask {
+  background: url(/images/icon-menuItem-bang.png) no-repeat center bottom;
+  background-size: contain;
+}
+.menu .menuPs .menuMy-list .menuItem .icon-menuItem-help {
+  background: url(/images/icon-menuItem-help.png) no-repeat center bottom;
+  background-size: contain;
+}
+.menu .menuPs .menuMy-list .menuItem .icon-menuItem-work {
+  background: url(/images/icon-menuItem-work.png) no-repeat center bottom;
+  background-size: contain;
+}
+.menu .menuTop {
+  position: relative;
+  /*display: block;*/
+  width: 3.29rem;
+  height: 3.29rem;
+  margin-top: 0.93rem;
+}
+.menu .menuTop .menuBg {
+  width: 100%;
+  height: 100%;
+  opacity: 0.89;
+  border: 0.08rem solid rgba(255, 255, 255, 0.9);
+  border-radius: 100%;
+  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
+  background-color: #000;
+}
+.menu .menuTop .icon-top {
+  display: block;
+  width: 1.21rem;
+  height: 1.29rem;
+  position: absolute;
+  top: 0;
+  left: 0.36rem;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background: url(/images/icon-top.png) no-repeat 0 0;
+  background-size: 100%;
 }
 
 .deleteComment-fix {
@@ -988,6 +992,30 @@ body {
   font-size: 0.86rem;
   color: #2b2b2b;
   cursor: pointer;
+}
+.share-mask {
+  position: fixed;
+  z-index: 999999;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.share-mask .mask-p {
+  padding-top: 3.57rem;
+  text-align: center;
+  font-size: 1.21rem;
+  color: #fff;
+  line-height: 1.93rem;
+}
+.share-mask .mask-icon {
+  position: absolute;
+  top: 1.57rem;
+  right: 2.29rem;
+  width: 2.82rem;
+  height: 2.57rem;
+  background: url("http://7u2spr.com2.z0.glb.qiniucdn.com/movie/share.png") center no-repeat;
+  background-size: contain;
 }
 
 .index-ask-pageSection {
