--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -11,29 +11,30 @@
 		<div class="menuBg"></div>
 		<i class="icon-top"></i>
 	</li>
-	<li class="menuMy">
-		<div class="menuBg"></div>
+	<li class="menuPs">
+		<!-- <div class="menuBg"></div> -->
 		<i class="icon-My"></i>
+		<i class="icon-Ps"></i>
 		<ul class="menuMy-list hide">
-			<a href="#ask/index" class="menuItem clearfix">
+			<a href="#upload/ask" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-hall"></i>
-				<span class="text-menuItem">求P大厅</span>
+				<span class="text-menuItem">求P</span>
 			</a >
-			<a href="/services/personal/ask" class="menuItem clearfix">
+			<a href="#ask/index" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-ask"></i>
-				<span class="text-menuItem">我的求P</span>
+				<span class="text-menuItem">帮P</span>
 			</a >
-			<a href="/services/personal/reply" class="menuItem clearfix">
+<!-- 			<a href="/services/personal/reply" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-help"></i>
 				<span class="text-menuItem">我的帮P</span>
 			</a >
 			<a href="/services/personal/work" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-work"></i>
 				<span class="text-menuItem">我的作品</span>
-			</a >
+			</a > -->
 		</ul>
 	</li>
-	<li class="menuPs">
-		<a href="/services/upload/ask" class="icon-Ps"></a>
-	</li>
+<!-- 	<li class="menuPs">
+		<a href="#ask/index" class="icon-Ps"></a>
+	</li> -->
 </ul>
