--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -28,3 +28,185 @@
         }
     }
 }
+.menu{
+    position: fixed;
+    bottom: 7%;/*to be modified*/
+    right: 4%;
+    z-index: 980;
+    .menuPs{
+/*        position: relative;
+        display: block;
+        width: 3.29rem;
+        height: 3.29rem;
+        margin-top: 0.93rem;*/
+        position: relative;
+        width: 3.29rem;
+        height: 3.29rem;
+        margin-top: 0.93rem;
+        border: 0.08rem solid rgba(255,255,255,0.9);
+        border-radius: 100%;
+        box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+        background-color: #000;
+        .menuBg{
+            width: 100%;
+            height: 100%;
+            opacity: 0.89;
+            border: 0.08rem solid rgba(255,255,255,0.9);
+            border-radius: 100%;
+            box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+            background-color: #000;
+        }
+        .icon-My{
+            display: block;
+            width: 0.93rem;
+            height: 1.21rem;
+            position: absolute;
+            top: 0;
+            left: 0.25rem;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            background: url(/images/icon-my.png) no-repeat 0 0;
+            background-size: 100%;
+        }
+        .menuMy-list{
+            display: block;
+            position: absolute;
+            bottom: -0rem;
+            right: 3.93rem;
+            width: 10.36rem;
+            border-radius: 1rem;
+            box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
+            background-color: #fff;
+            .menuItem{
+                display: block;
+                /*padding: 1rem 0;*/
+                padding: 1.36rem 0 1.36rem 2.57rem;
+                color: #000;
+                border-bottom: 1px solid rgba(0,0,0,0.2);
+                .icon-menuItem{
+                    float: left;
+                    width: 1.5rem;
+                    height: 1.5rem;
+                    margin-right: 1.54rem;
+                }
+                .text-menuItem{
+                    float: left;
+                    font-size: 1.07rem;
+                    opacity: .89;
+                }
+                .icon-menuItem-hall{
+                    background:url(/images/p.png) no-repeat center bottom;
+                    background-size: contain;
+                }
+                .icon-menuItem-ask{
+                    background: url(/images/icon-menuItem-bang.png)no-repeat center bottom;
+                    background-size: contain;
+                }
+                .icon-menuItem-help{
+                    background:url(/images/icon-menuItem-help.png) no-repeat center bottom;
+                    background-size: contain;
+                }
+                .icon-menuItem-work{
+                    background: url(/images/icon-menuItem-work.png)no-repeat center bottom;
+                    background-size: contain;
+                }
+            }
+        }
+    }
+/*    .menuPs{
+        position: relative;
+        width: 3.29rem;
+        height: 3.29rem;
+        margin-top: 0.93rem;
+        border: 0.08rem solid rgba(255,255,255,0.9);
+        border-radius: 100%;
+        box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+        background-color: #000;
+        .menuBg{
+            width: 100%;
+            height: 100%;
+            opacity: 0.89;
+        }
+        .icon-Ps{
+            display: block;
+            width: 0.68rem;
+            height: 1rem;
+            position: absolute;
+            top: 0;
+            left: 0.36rem;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            background: url(/images/icon-ps.png) no-repeat 0 0;
+            background-size: 100%;
+        }
+        .menuPs-list{
+            display: block;
+            position: absolute;
+            bottom: -0.07rem;
+            right: -0.07rem;
+            width: 10.36rem;
+            padding: 0.57rem 0;
+            border-radius: 0.21rem;
+            box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+            background-color: #fff;
+            .menuItem{
+                padding: 1rem 0;
+                margin-left: 1.28rem;
+                .icon-menuItem{
+                    display: block;
+                    float: left;
+                    margin-top: .15rem;
+                    width: 1.25rem;
+                    height: 1.07rem;
+                }
+                .text-menuItem{
+                    display: block;
+                    float: left;
+                    margin-left: 1.04rem;
+                    font-size: 1.07rem;
+                    opacity: .89;
+                    cursor: pointer;
+                }
+                .icon-menuItem-ask{
+                    background: url(/images/icon-menuItem-ask.png)no-repeat center bottom;
+                    background-size: contain;
+                }
+                .icon-menuItem-switch{
+                    background: url(/images/icon-menuItem-switch.png)no-repeat center bottom;
+                    background-size: contain;
+                }
+            }
+        }
+    }*/
+    .menuTop{
+        position: relative;
+        /*display: block;*/
+        width: 3.29rem;
+        height: 3.29rem;
+        margin-top: 0.93rem;
+        .menuBg{
+            width: 100%;
+            height: 100%;
+            opacity: 0.89;
+            border: 0.08rem solid rgba(255,255,255,0.9);
+            border-radius: 100%;
+            box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+            background-color: #000;
+        }
+        .icon-top{
+            display: block;
+            width: 1.21rem;
+            height: 1.29rem;
+            position: absolute;
+            top: 0;
+            left: 0.36rem;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            background: url(/images/icon-top.png) no-repeat 0 0;
+            background-size: 100%;
+        }
+    }
+}
