--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -7,14 +7,14 @@
 	</a>
 </div>
 <ul class="menu" id="serveceMenu">
-	<li class="menuTop none">
+	<li class="menuTop hide">
 		<div class="menuBg"></div>
 		<i class="icon-top"></i>
 	</li>
 	<li class="menuPs">
 		<!-- <div class="menuBg"></div> -->
 		<i class="icon-My"></i>
-		<i class="icon-Ps"></i>
+		<!-- <i class="icon-Ps"></i> -->
 		<ul class="menuMy-list hide">
 			<a href="#upload/ask" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-hall"></i>
