--- a/public/services/src/app/views/ask/detail/detail.html
+++ b/public/services/src/app/views/ask/detail/detail.html
@@ -94,7 +94,7 @@
 			<% } else { %> 
 		<div class="commentLine">
 			<div class="commentHead clearfix">
-				<span class="userName"><%= comment.nickname %></span>
+				<span class="userName userName-reply"><%= comment.nickname %></span>
 				<div class="commentOption">
 					<span class="optionItem reply">回复</span>
 					<!-- <span class="optionItem delete">删除</span> -->
@@ -113,10 +113,10 @@
 <% }) %>
 
 <div class="post-footer clearfix">
-	<a href="javascript:;" class="footerHelp">
+	<div class="footerHelp">
 		<i class="icon-help"></i>
 		帮P
-	</a>
+	</div>
 	<a href="/services/upload/reply" class="footerUpload">
 		上传作品
 	</a>
@@ -126,8 +126,8 @@
 <div class="window-fix hide" id="replyWindow">
 	<div class="window clearfix">
 		<div class="windowHeader">
-			<span>回复</span>
-			<span class="replyTo">@咩美：</span>
+			<span>回复@</span>
+			<span class="replyTo">咩美：</span>
 		</div>
 		<textarea class="windowContent" autofocus="autofocus"></textarea>
 		<div class="windowOperation">
