--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -58,11 +58,11 @@
         }
         .icon-My{
             display: block;
-            width: 0.93rem;
-            height: 1.21rem;
+            width: 3.29rem;
+            height: 3.29rem;
             position: absolute;
             top: 0;
-            left: 0.25rem;
+            left: 0;
             right: 0;
             bottom: 0;
             margin: auto;
