--- a/public/services/src/app/views/ask/index/ask-index.less
+++ b/public/services/src/app/views/ask/index/ask-index.less
@@ -1,16 +1,17 @@
 .grid-item {
-    position: absolute;
+    width: 47%;
+    float: left;
+    margin-bottom: 20px;
 }
     .index-ask-pageSection{
         width: 100%;
         background-color: #f7f7f7;
         .workSection{
-            float: left;
-            width: 47%;
             margin: 0 1.5% 3%;
             border-radius: 0.29rem;
             box-shadow: 0 0.04rem 0.04rem #e2e2e2;
             overflow: hidden;
+        
             .workSectionHeader{
                 width: 100%;
                 box-sizing: border-box;
