--- a/public/services/src/app/views/ask/index/index.html
+++ b/public/services/src/app/views/ask/index/index.html
@@ -1,4 +1,4 @@
-<div class="workSection grid-item">
+<div class="workSection ">
 	<div class="workSectionHeader clearfix">
 		<div class="portrait">
 			<img src="<%= avatar %>" alt="用户头像">
