--- a/public/services/src/app/views/hot/reply/reply.html
+++ b/public/services/src/app/views/hot/reply/reply.html
@@ -1,10 +1,10 @@
 <div class="workSection">
-	<div class="workSectionHeader clearfix">
+	<a href="#personal/personal/<%= uid %>" class="workSectionHeader clearfix">
 		<div class="portrait">
 			<img src="<%= avatar %>" alt="用户头像">
 		</div>
 		<span class="nickname"><%= nickname %></span>
-	</div>
+	</a>
 	<a href="#ask/detail/<%= ask_id%>/<%= reply_id %>" class="workPic">
 		<img src="<%= image_url %>" alt="作品">
 		<div class="origin">
