--- a/public/services/src/app/views/hot/reply/reply.less
+++ b/public/services/src/app/views/hot/reply/reply.less
@@ -3,12 +3,12 @@
         background-color: #f7f7f7;
         .workSection{
             float: left;
-            width: 47%;
-            margin: 1.5%;
+            width: 100%;
             border-radius: 0.29rem;
             box-shadow: 0 0.04rem 0.04rem #e2e2e2;
             overflow: hidden;
             .workSectionHeader{
+                display: block;
                 width: 100%;
                 box-sizing: border-box;
                 padding: 0.54rem 0 0.54rem 0.36rem;
