--- a/public/services/src/app/views/personal/reply/personal-reply.less
+++ b/public/services/src/app/views/personal/reply/personal-reply.less
@@ -1,12 +1,11 @@
 
     .myWork-pageSection{
-        float: left;
-        width: 50%;
-        background-color: #f7f7f7;
+        display: block;
+        width: 47%;
+        background-color: #fff;
         .workSection{
-            float: left;
-            width: 94%;
-            margin: 3%;
+            display: block;
+            width: 100%;
             .workPic{
                 width: 100%;
             }
@@ -14,7 +13,7 @@
                 background-color: #fff;
                 .footerWrapper{
                     float: right;
-                    padding: 1rem 0;
+                    padding: 0.5rem 0;
                     .like{
                         float: left;
                         line-height: 0.89rem;
