--- a/public/services/src/app/views/personal/work/personal-work.less
+++ b/public/services/src/app/views/personal/work/personal-work.less
@@ -1,10 +1,12 @@
+.personal-grid {
+    background-color: #f7f7f7;
+}
     .main-ask-section{
-        width: 100%;
-        background-color: #f7f7f7;
+        width: 47%;
+        margin: 1.5%;
         .ask-section{
             float: left;
-            width: 47%;
-            margin: 1.5%;
+            width: 100%;
             background-color: #fff;
             border-radius: 0.21rem;
             box-shadow: 0 0.04rem  0 #e2e2e2;
@@ -53,7 +55,8 @@
                 .work{
                     float: right;
                     .icon-work{
-                        float: left;
+                        display: inline-block;
+                        vertical-align: middle;
                         margin-right: 0.68rem;
                         width: 0.93rem;
                         height: 0.89rem;
@@ -61,8 +64,10 @@
                         background-size: 100%;
                     }
                     .text-work{
-                        float: left;
+                        display: inline-block;
+                        vertical-align: middle;
                         font-size: 0.71rem;
+                        line-height: 0.89rem;
                         color: rgba(0,0,0,0.49);
                     }
                 }
