--- a/public/css/main.css
+++ b/public/css/main.css
@@ -750,9 +750,11 @@ body {
   width: 100%;
 }
 .post-workShow .sectionFooter {
-  width: 100%;
-  padding: 0 3%;
+  width: 94%;
+  padding: 0 0 1.25rem;
+  margin: 0 auto;
   box-sizing: border-box;
+  border-bottom: 1px solid #eaeaea;
 }
 .post-workShow .sectionFooter .workDesc {
   display: block;
@@ -762,8 +764,7 @@ body {
 }
 .post-workShow .sectionFooter .footerBottom {
   margin-top: 1.46rem;
-  margin-bottom: 1.25rem;
-  margin-right: 0.91rem;
+  /*margin-right: 0.91rem;*/
 }
 .post-workShow .sectionFooter .footerBottom .share {
   float: left;
@@ -818,40 +819,40 @@ body {
 .artWorkShow {
   border-bottom: 1.43rem solid #F7F7F7;
 }
-.artWorkShow .commentDetail {
+.commentDetail {
   width: 94%;
   margin: 0 3%;
-  border-top: 1px solid #eaeaea;
-}
-.artWorkShow .commentDetail .commentLine {
-  padding: 0.86rem 0 0.86rem 0;
   border-bottom: 1px solid #eaeaea;
 }
-.artWorkShow .commentDetail .commentLine .commentHead .userName {
+.commentDetail .commentLine {
+  padding: 0.86rem 0 0.86rem 0;
+  /*border-bottom: 1px solid #eaeaea;*/
+}
+.commentDetail .commentLine .commentHead .userName {
   float: left;
   color: #000;
   font-size: 0.93rem;
   font-family: "PingFangSC-Regular", "sans-serif";
 }
-.artWorkShow .commentDetail .commentLine .commentHead .commentOption {
+.commentDetail .commentLine .commentHead .commentOption {
   float: right;
 }
-.artWorkShow .commentDetail .commentLine .commentHead .commentOption .optionItem {
+.commentDetail .commentLine .commentHead .commentOption .optionItem {
   font-family: "PingFangSC-Light", "sans-serif";
   font-size: 0.79rem;
   cursor: pointer;
 }
-.artWorkShow .commentDetail .commentLine .commentHead .commentOption .reply {
+.commentDetail .commentLine .commentHead .commentOption .reply {
   color: #fe5401;
   margin-right: 0.5rem;
 }
-.artWorkShow .commentDetail .commentLine .commentHead .commentOption .delete {
+.commentDetail .commentLine .commentHead .commentOption .delete {
   color: #000;
   opacity: 0.6;
   margin-left: 1.32rem;
   margin-right: 0.5rem;
 }
-.artWorkShow .commentDetail .commentLine .commentText {
+.commentDetail .commentLine .commentText {
   margin-top: 0.46rem;
   display: block;
   width: 100%;
@@ -859,26 +860,26 @@ body {
   font-family: "PingFangSC-Regular", "sans-serif";
   opacity: 0.6;
 }
-.artWorkShow .commentDetail .commentReply {
+.commentDetail .commentReply {
   padding-top: 1.14rem;
 }
-.artWorkShow .commentDetail .commentReply .userNameGroup {
+.commentDetail .commentReply .userNameGroup {
   float: left;
   line-height: 1.43rem;
   font-size: 0.93rem;
 }
-.artWorkShow .commentDetail .commentReply .userNameGroup .userName-reply {
+.commentDetail .commentReply .userNameGroup .userName-reply {
   float: left;
   /*width: 1.86rem;*/
   white-space: nowrap;
 }
-.artWorkShow .commentDetail .commentReply .userNameGroup em {
+.commentDetail .commentReply .userNameGroup em {
   float: left;
   margin: 0 .25rem;
   font-family: "PingFangSC-Regular", "sans-serif";
   opacity: 0.6;
 }
-.artWorkShow .commentDetail .commentReply .userNameGroup .userName-beReplied {
+.commentDetail .commentReply .userNameGroup .userName-beReplied {
   float: left;
   /*width: 3.71rem;*/
 }
@@ -1025,12 +1026,12 @@ body {
 .grid-item {
   float: left;
   width: 47%;
-  margin: 0 1.5% 3%;
+  margin: 1.5%;
 }
 .grid {
   position: relative;
-  float: left;
-  margin-bottom: 20px;
+  display: block;
+  width: 100%;
 }
 .index-ask-pageSection {
   width: 100%;
@@ -1153,13 +1154,13 @@ body {
 }
 .hot-pageSection .workSection {
   float: left;
-  width: 47%;
-  margin: 1.5%;
+  width: 100%;
   border-radius: 0.29rem;
   box-shadow: 0 0.04rem 0.04rem #e2e2e2;
   overflow: hidden;
 }
 .hot-pageSection .workSection .workSectionHeader {
+  display: block;
   width: 100%;
   box-sizing: border-box;
   padding: 0.54rem 0 0.54rem 0.36rem;
@@ -1312,6 +1313,7 @@ body {
   background-color: #fff;
 }
 .header-portrait {
+  margin-top: -0.71rem;
   width: 100%;
   height: 9.32rem;
   padding-top: 1.93rem;
@@ -1319,9 +1321,9 @@ body {
   background-color: #ffed4f;
 }
 .header-portrait .user-info {
-  width: 4.29rem;
-  margin: 0 auto;
-  text-align: center;
+  /*width: 4.29rem;*/
+  /*margin: 0 auto;*/
+  /*text-align: center;*/
 }
 .header-portrait .user-info .portrait {
   margin: 0 auto;
@@ -1337,6 +1339,9 @@ body {
   height: 100%;
 }
 .header-portrait .user-info .nickname {
+  display: block;
+  width: 100%;
+  text-align: center;
   font-size: 1.07rem;
   color: rgba(0, 0, 0, 0.8);
 }
@@ -1345,11 +1350,12 @@ body {
   width: 100%;
   height: 2.71rem;
   background-color: #fff;
-  display: flex;
+  text-align: center;
 }
 .header-nav .nav-item {
-  flex: 1;
-  width: 3.93rem;
+  display: inline-block;
+  width: 33.3%;
+  height: 2.21rem;
   text-align: center;
   line-height: 2.71rem;
   font-size: 0.86rem;
@@ -1358,11 +1364,12 @@ body {
 .header-nav .nav-item a {
   display: inline-block;
   width: 3.93rem;
+  height: 2.5rem;
 }
 .header-nav .active a {
   font-size: 0.86rem;
   color: rgba(0, 0, 0, 0.8);
-  border-bottom: 0.14rem solid #ffed4f;
+  border-bottom: 0.21rem solid #ffed4f;
 }
 
 .main-processing {
@@ -1372,7 +1379,7 @@ body {
   padding-top: 3%;
 }
 .main-processing .processing-block {
-  display: flex;
+  overflow: hidden;
   height: 8.93rem;
   width: 94%;
   margin: 0 auto;
@@ -1380,8 +1387,8 @@ body {
   background-color: #fff;
 }
 .main-processing .processing-block .pic {
-  flex: 0.35;
-  width: 8.93rem;
+  float: left;
+  width: 35%;
   height: 100%;
   overflow: hidden;
 }
@@ -1390,9 +1397,9 @@ body {
   width: 100%;
 }
 .main-processing .processing-block .content {
+  float: left;
   position: relative;
-  flex: 0.65;
-  width: 23.9rem;
+  width: 65%;
   height: 100%;
   box-sizing: border-box;
   padding: 0.54rem 0.64rem 0.29rem 0.43rem;
@@ -1459,48 +1466,53 @@ body {
 }
 .main-processing .processing-block .content .content-bottom .download {
   float: left;
+  line-height: 2rem;
 }
 .main-processing .processing-block .content .content-bottom .download .icon-download {
-  float: left;
-  display: block;
+  vertical-align: middle;
+  display: inline-block;
   width: 0.57rem;
   height: 0.71rem;
+  margin-right: 0.2rem;
   background: url(/images/icon-download.png) no-repeat 0 0;
   background-size: 100%;
 }
 .main-processing .processing-block .content .content-bottom .download span {
-  float: left;
+  vertical-align: middle;
+  display: inline-block;
   line-height: 0.71rem;
   font-size: 0.7rem;
   color: rgba(0, 0, 0, 0.3);
 }
 .main-processing .processing-block .content .content-bottom .upload {
   float: right;
+  line-height: 2rem;
 }
 .main-processing .processing-block .content .content-bottom .upload .icon-upload {
-  float: left;
-  display: block;
-  width: 0.57rem;
-  height: 0.71rem;
+  vertical-align: middle;
+  display: inline-block;
+  width: 0.71rem;
+  height: 0.81rem;
+  margin-right: 0.2rem;
   background: url(/images/icon-upload.png) no-repeat 0 0;
   background-size: 100%;
 }
 .main-processing .processing-block .content .content-bottom .upload span {
-  float: left;
-  line-height: 0.71rem;
-  font-size: 0.7rem;
+  vertical-align: middle;
+  display: inline-block;
+  line-height: 0.8rem;
+  font-size: 0.8rem;
   color: rgba(0, 0, 0, 0.3);
 }
 
 .myWork-pageSection {
-  float: left;
-  width: 50%;
-  background-color: #f7f7f7;
+  display: block;
+  width: 47%;
+  background-color: #fff;
 }
 .myWork-pageSection .workSection {
-  float: left;
-  width: 94%;
-  margin: 3%;
+  display: block;
+  width: 100%;
 }
 .myWork-pageSection .workSection .workPic {
   width: 100%;
@@ -1510,7 +1522,7 @@ body {
 }
 .myWork-pageSection .workSection .workSectionFooter .footerWrapper {
   float: right;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
 }
 .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like {
   float: left;
@@ -1566,14 +1578,16 @@ body {
   opacity: 0.3;
 }
 
-.main-ask-section {
-  width: 100%;
+.personal-grid {
   background-color: #f7f7f7;
+}
+.main-ask-section {
+  width: 47%;
+  margin: 1.5%;
 }
 .main-ask-section .ask-section {
   float: left;
-  width: 47%;
-  margin: 1.5%;
+  width: 100%;
   background-color: #fff;
   border-radius: 0.21rem;
   box-shadow: 0 0.04rem  0 #e2e2e2;
@@ -1625,7 +1639,8 @@ body {
   float: right;
 }
 .main-ask-section .ask-section .ask-section-bottom .work .icon-work {
-  float: left;
+  display: inline-block;
+  vertical-align: middle;
   margin-right: 0.68rem;
   width: 0.93rem;
   height: 0.89rem;
@@ -1633,8 +1648,10 @@ body {
   background-size: 100%;
 }
 .main-ask-section .ask-section .ask-section-bottom .work .text-work {
-  float: left;
+  display: inline-block;
+  vertical-align: middle;
   font-size: 0.71rem;
+  line-height: 0.89rem;
   color: rgba(0, 0, 0, 0.49);
 }
 
