--- a/public/services/src/app/views/ask/index/ask-index.less
+++ b/public/services/src/app/views/ask/index/ask-index.less
@@ -1,12 +1,12 @@
 .grid-item {
     float: left;
     width: 47%;
-    margin: 0 1.5% 3%;
+    margin: 1.5%;
 }
 .grid {
     position: relative;
-    float: left;
-    margin-bottom: 20px;
+    display: block;
+    width: 100%;
 }
     .index-ask-pageSection{
         width: 100%;
