--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -2,7 +2,7 @@
 	<a href="" class="logo">
 		<img src="/images/logo.png" alt="LOGO">
 	</a>
-	<a href="javascript:;" class="personalCenter">
+	<a href="" class="personalCenter">
 		<img src="/images/personalCenter.png" alt="用户中心">
 	</a>
 </div>
