--- a/public/services/src/app/views/personal/reply/reply.html
+++ b/public/services/src/app/views/personal/reply/reply.html
@@ -1,15 +1,15 @@
-		<a href="/services/ask/detail" class="workSection">
-			<img src="<%= image_url %>" alt="作品" class="workPic">
-			<div class="workSectionFooter clearfix">
-				<div class="footerWrapper">
-					<div class="like">
-						<i class="icon-like"></i>
-						<span class="text-like"><%= up_count %></span>
-					</div>
-					<div class="comment">
-						<i class="icon-comment"></i>
-						<span class="text-comment">80</span>
-					</div>
-				</div>
+<a href="#ask/detail/<%= ask_id %>" class="workSection">
+	<img src="<%= image_url %>" alt="作品" class="workPic">
+	<div class="workSectionFooter clearfix">
+		<div class="footerWrapper">
+			<div class="like">
+				<i class="icon-like"></i>
+				<span class="text-like"><%= up_count %></span>
 			</div>
-		</a>
+			<div class="comment">
+				<i class="icon-comment"></i>
+				<span class="text-comment"><%= comment_count %></span>
+			</div>
+		</div>
+	</div>
+</a>
